test/tasty/pos/src-3/tastytest/HelloWorld.scala
package tastytest

object HelloWorld {
  def `1) my long test assertion that 1%3 == 3`: Int = 1%3
}
