test/tasty/neg/src-2/TestStaticAnnot_fail.scala
package tastytest

object TestStaticAnnot {

  def test = assert(StaticAnnot.sum(1,2) == 3)

}
